<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_title"
                style="@style/Widget.Material3.TextInputEditText.FilledBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/add_note_title_hint_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_add_tag"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/add_note_tag_text"
                app:layout_constraintEnd_toStartOf="@id/tv_tag_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_tag_name"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Cenfotec"
                app:layout_constraintTop_toTopOf="@id/tv_add_tag"
                app:layout_constraintBottom_toBottomOf="@id/tv_add_tag"
                app:layout_constraintEnd_toStartOf="@id/iv_add_tag_chevron"
                app:layout_constraintTop_toBottomOf="@id/edt_title" />

            <ImageView
                android:id="@+id/iv_add_tag_chevron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_chevron_right"
                app:layout_constraintBottom_toBottomOf="@id/tv_add_tag"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_add_tag" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_description"
                style="@style/Widget.Material3.TextInputEditText.FilledBox"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:hint="@string/add_note_description_hint_text"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_add_tag" />

            <View
                android:id="@+id/tag_cell"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="?android:attr/selectableItemBackground"
                app:layout_constraintBottom_toTopOf="@id/edt_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:contentDescription="@string/add_note_action"
        android:src="@drawable/ic_check_24"
        app:layout_anchor="@id/container"
        app:layout_anchorGravity="bottom|right|end" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>