<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notes.NoteListFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:collapsedTitleTextAppearance="?attr/textAppearanceTitleLarge"
            app:layout_scrollEffect="compress"
            app:layout_scrollFlags="noScroll"
            app:title="@string/notes_list_screen_title" />


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notes_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="10"
            tools:listitem="@layout/note_item_layout" />

        <ImageView
            android:id="@+id/iv_add_icon"
            android:layout_width="@dimen/add_note_icon_size"
            android:layout_height="@dimen/add_note_icon_size"
            android:contentDescription="@string/no_notes_icon"
            android:src="@drawable/ic_add_note"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_add_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_notes_text"
            android:textSize="@dimen/no_notes_text_size"
            app:layout_constraintEnd_toEndOf="@id/notes_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_add_icon" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/no_notes_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="iv_add_icon,tv_add_note"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:contentDescription="@null"
        android:src="@android:drawable/ic_input_add"
        app:layout_anchor="@id/container"
        app:layout_anchorGravity="bottom|right|end" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>